[package]
name = "actlib"
version = "0.0.0"
authors = [
	"Philipp Ammann <philipp.ammann@campus.lmu.de>",
	"Yannick Kaiser <Y.Kaiser@campus.lmu.de>",
	"Korbinian Staudacher <k.staudacher@campus.lmu.de>",
	"Wolfgang Witt <Wolfgang.Witt@campus.lmu.de>"
]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0"
netchannel = { path = "../netchannel" }
serde = { version = "1", features = ["derive"] }
bincode = "1"
uuid = { version = "0.8", features = ["serde", "v4"] }
get_if_addrs = "0.5.3"
indexmap = "1.3"
hostname = "0.3"
