[package]
name = "cfg-generator"
version = "0.1.0"
authors = ["pca <philipp.ammann@campus.lmu.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
netchannel = { path = "../netchannel" }
serde = { version = "1", features = ["derive"] }
bincode = "1"
get_if_addrs = "0.5.3"
