[package]
name = "infinigryd"
version = "0.1.0"
authors = [
	"Philipp Ammann <philipp.ammann@campus.lmu.de>",
	"Yannick Kaiser <Y.Kaiser@campus.lmu.de>",
	"Korbinian Staudacher <k.staudacher@campus.lmu.de>",
	"Wolfgang Witt <wolfgang.witt@campus.lmu.de>"
]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0"
simple_logger = "1.5"
actlib = { path = "../actlib" }
serde = { version = "1", features = ["derive"] }
bincode = "1"
rand = "0.7"
hostname = "0.3"
colored = "1.9"
