[package]
name = "netchannel"
version = "0.1.0"
authors = ["Philipp Ammann <philipp.ammann@campus.lmu.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "netchannel"
path = "src/netchannel.rs"

[dependencies]
log = "0"
serde = { version = "1", features = ["derive"] }
hostname = "0"
