[package]
name = "webworker"
version = "0.1.0"
authors = ["The Infinigryd Development Team"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actlib = { path = "../actlib" }
infinigryd = { path = "../infinigryd" }
bincode = "1"
rand = "0"
uuid = { version = "0", features = ["serde", "v4"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
