[package]
name = "work-distributer-test"
version = "0.1.0"
authors = ["Kaiser <yannick-kaiser@gmx.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actlib = { path = "../actlib" }
bincode = "1"
serde = { version = "1", features = ["derive"] }
